tests/ui/parser/missing_right_paren.stderr
error: this file contains an unclosed delimiter
  --> $DIR/missing_right_paren.rs:4:2
   |
LL | fn main((ؼ
   |        -- unclosed delimiter
   |        |
   |        unclosed delimiter
LL |
   |  ^

error: this file contains an unclosed delimiter
  --> $DIR/missing_right_paren.rs:4:2
   |
LL | fn main((ؼ
   |        -- unclosed delimiter
   |        |
   |        unclosed delimiter
LL |
   |  ^

error: expected one of `:` or `|`, found `)`
  --> $DIR/missing_right_paren.rs:4:2
   |
LL |
   |  ^ expected one of `:` or `|`

error: expected one of `->`, `where`, or `{`, found `<eof>`
  --> $DIR/missing_right_paren.rs:4:2
   |
LL |
   |  ^ expected one of `->`, `where`, or `{`

error: aborting due to 4 previous errors

