tests/ui/parser/missing_right_paren.rs
// error-pattern: this file contains an unclosed delimiter
<<<<<<< HEAD
// error-pattern: aborting due to previous error
fn main((ؼ
=======
// error-pattern: aborting due to 1 previous error
fn main((ؼ
>>>>>>> pull-upstream-temp--do-not-use-for-real-code
